# MidiKraft-librarian

./: AutomaticCategory.cpp  AutomaticCategory.h  BinaryResources.h  CMakeLists.txt  Category.cpp  Category.h  DownloadStrategy.cpp  DownloadStrategy.h  JsonSchema.cpp  JsonSchema.h  JsonSerialization.cpp  JsonSerialization.h  Librarian.cpp  Librarian.h  PatchHolder.cpp  PatchHolder.h  PatchInterchangeFormat.cpp  PatchInterchangeFormat.h  PatchList.cpp  PatchList.h  ProgramDumpDownloadStrategy.cpp  ProgramDumpDownloadStrategy.h  README.md  RapidjsonHelper.cpp  RapidjsonHelper.h  Session.h  SynthBank.cpp  SynthBank.h  SynthHolder.cpp  SynthHolder.h
resources/: automatic_categories.jsonc  mapping_categories.jsonc
